# Axiom

./: .gitignore  EXAMPLES.md  README.md  pyproject.toml  test_agent.py  test_local.py  train.py
axiom/: __init__.py  api_clients.py  cli.py  ingestion.py  literature.py  llm_backends.py  models.py  normaliser.py  quality.py  warehouse.py
axiom/sources/: __init__.py  arxiv.py  ieee.py
